--- a/src/app/courses/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses/courses-card-list/courses-card-list.component.html
@@ -1,21 +1,24 @@
 <mat-card *ngFor="let course of courses">
+  <mat-card-header>
+    <mat-card-title>{{ course.description }}</mat-card-title>
+  </mat-card-header>
 
-    <mat-card-header>
+  <mat-card-content>
+    <p>{{ course.longDescription }}</p>
+  </mat-card-content>
 
-        <mat-card-title>{{course.description}}</mat-card-title>
-
-    </mat-card-header>
-
-    <mat-card-content>
-        <p>{{course.longDescription}}</p>
-    </mat-card-content>
-
-    <mat-card-actions class="course-actions">
-
-        <button mat-raised-button color="primary" [routerLink]="['/courses', course.url]">
-            View Lessons
-        </button>
-
-    </mat-card-actions>
-
+  <mat-card-actions class="course-actions">
+    <button
+      mat-raised-button
+      color="primary"
+      [routerLink]="['/courses', course.url]"
+    >
+      View Lessons
+    </button>
+    <button mat-mini-fab color="warn">
+      <mat-icon class="add-course-btn" (click)="deleteCourse(course.id)"
+        >delete</mat-icon
+      >
+    </button>
+  </mat-card-actions>
 </mat-card>
