--- a/src/app/courses/home/home.component.html
+++ b/src/app/courses/home/home.component.html
@@ -1,10 +1,16 @@
-<div *ngIf="loaded$ | async else loading">
-	<h1>Course List</h1>
+<div *ngIf="loaded$ | async; else loading">
+  <h1>Course List</h1>
+  <button mat-mini-fab>
+    <mat-icon class="add-course-btn" (click)="addPrefilledCourse()"
+      >add</mat-icon
+    >
+  </button>
 
-	<courses-card-list [courses]="courses$ | async">
-	</courses-card-list>
-	<h2>Course entities</h2>
-	<pre style="overflow: auto; height: 30rem;">{{courses$ | async | json }}</pre>
+  <courses-card-list [courses]="courses$ | async"> </courses-card-list>
+  <h2>Course entities</h2>
+  <pre style="overflow: auto; height: 30rem;">{{
+    courses$ | async | json
+  }}</pre>
 </div>
 
 <ng-template #loading>
